tiny fix so that scrollbar doesn't appear on empty file contents

--- a/public/stylesheets/show_dir.css
+++ b/public/stylesheets/show_dir.css
@@ -9,7 +9,6 @@ pre {
   background: #33383e !important;
   border: none !important;
   padding: 0 !important;
-  height: 100%;
   overflow: visible;
 }
 
